# wordlist-pipeline

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.tmp/: include.csv
docs/: README.md
docs/sources/: OpenCC.md  THUOCL.md  hanyuguoxue_changdu3_top50.md  jieba.md  zhwiki_titles_ns0_gz.md
scripts/: contains_check.py  crawl_hanyuguoxue_top50.py  download.sh  extract.py  filter_3zi.py  merge.py  normalize.py  pick_sources.py  plot_sources_venn.py  qc.py  wordlist.py
sources/: sources.txt
