[project]
name = "wordlist-pipeline"
version = "0.1.0"
description = "Build a 3-character Chinese word list via a reproducible pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # 当前这套流水线（extract/normalize/filter/merge/qc）只用标准库
  # 若你后面加网页抓取/解析，可在这里追加：
  # "requests>=2.31.0",
  # "beautifulsoup4>=4.12.2",
  # "lxml>=5.1.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "questionary>=2.0.1",
]

[project.optional-dependencies]
viz = [
  "matplotlib>=3.8.0",
  "matplotlib-venn>=0.11.10",
  "pandas>=2.0.0",
  "upsetplot>=0.9.0",
]

[tool.setuptools]
# This is a scripts-first repo (no importable top-level package).
# Disable automatic package discovery to avoid accidental package inclusion.
py-modules = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
